Fixing spacing

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -104,7 +104,7 @@ a:hover:before {
 }
 
 .info {
-  margin: 0 50px;
+  margin: 0 30px;
   display: flex;
   align-items: center;
 }
